--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "webpack-starter-kit",
+  "name": "overlook",
   "version": "2.0.0",
-  "description": "Project starter kit using webpack, mocha, chai, and SCSS/SASS enabled",
+  "description": "An app for people who are looking for available rooms for vacation getaway",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/turingschool-examples/webpack-starter-kit.git"
+    "url": "git+https://github.com/andrewvallejo/overlook.git"
   },
-  "author": "Turing School of Software and Design",
+  "homepage": "http://andrewvallejo.github.io/overlook",
+  "author": "Andrew Vallejo",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.4",
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^1.1.0",
     "mocha": "^8.4.0",
     "mochapack": "^2.1.2",
     "sass": "^1.34.0",
@@ -27,6 +29,8 @@
     "start": "webpack serve",
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
-    "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
+    "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
